# nemo-guardrail

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  masking.py  masking.yml  pii.py  pii_taxonomy.py  pii_taxonomy.yml  policies.py  pyproject.toml
configs/customer-support/: config.yml  prompts.yml
configs/default/: config.yml  prompts.yml
configs/resume-screening/: config.yml  prompts.yml
docs/: frontend-policy-api.md  frontend-redaction-api.md  guardrail-examples.md
scripts/: test_guardrails.py
