[project]
name = "nemo-guardrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "nemoguardrails[server]>=0.22.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.51.0",
]

[tool.uv]
package = false
